--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 #with MySQL
 spring.datasource.url= jdbc:mysql://${MYSQL_HOST:localhost}:5012/client_db
 spring.datasource.username=client_user
-spring.datasource.password=An0thrS3crt
+spring.datasource.password=pass
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
